--- a/index.html
+++ b/index.html
@@ -185,26 +185,34 @@
       <!-- /.tabs-content -->
       <div class="tabs-content " id="creators">
         <div class="card">
-          <img src="img/actors/1.png" alt="Carrie Coon" class="card-image">
+          <img src="img/actors/6.jpg" alt="Dan Aykroyd" class="card-image">
           <div class="card-text">
-            <h3 class="name">aaaaaaaaaa</h3>
-            <span class="en-name">aaaaaaa</span>
+            <h3 class="name">Дэн Эйкройд</h3>
+            <span class="en-name">Dan Aykroyd</span>
           </div>
         </div>
         <!-- /.card -->
         <div class="card">
-          <img src="img/actors/2.png" alt="Bill Murray" class="card-image">
+          <img src="img/creators/2.jpg" alt="Jason Reitman" class="card-image">
           <div class="card-text">
-            <h3 class="name">aaaaa</h3>
-            <span class="en-name">aaaaaaaa</span>
+            <h3 class="name">Джейсон Райтман</h3>
+            <span class="en-name">Jason Reitman</span>
           </div>
         </div>
         <!-- /.card -->
         <div class="card">
-          <img src="img/actors/3.png" alt="Paul Rudd" class="card-image">
+          <img src="img/creators/3.jpg" alt="Harold Ramis" class="card-image">
           <div class="card-text">
-            <h3 class="name">aaaaaa</h3>
-            <span class="en-name">aaaaaaaaaaa</span>
+            <h3 class="name">Гарольд Рамис</h3>
+            <span class="en-name">Harold Ramis</span>
+          </div>
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/creators/4.jpg" alt="Gil Kenan" class="card-image">
+          <div class="card-text">
+            <h3 class="name">Гил Кинан</h3>
+            <span class="en-name">Gil Kenan</span>
           </div>
         </div>
         <!-- /.card -->
